// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColumnAppearance snapshots should render ColumnAppearance 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Opacity
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--two-inputs"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="opacity"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="opacity"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="opacity"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral2"
                data-test-icon="opacity"
                height="12"
                name="Opacity"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="opacity"
              maxlength="6"
              type="text"
              value="100"
            />
            <div
              class="css-zcp5dz TextFieldPopover"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-6i6anv Popover"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral1"
                    data-test-icon="opacity"
                    height="12"
                    name="Opacity"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed opacity (100)
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="border-radius"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="border-radius"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="border-radius"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral2"
                data-test-icon="corners"
                height="12"
                name="Corners"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="border-radius"
              maxlength="6"
              type="text"
              value="0"
            />
            <div
              class="css-zcp5dz TextFieldPopover"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-6i6anv Popover"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral1"
                    data-test-icon="corners"
                    height="12"
                    name="Corners"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed border radius (0)
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="1"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral1"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ButtonIcon ButtonIcon--selected"
            data-test-button-icon="corners-mode"
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--blue1"
              data-test-icon="corners"
              height="12"
              name="Corners"
              width="12"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Individual corners
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnAppearance snapshots should render when values are mixed 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Opacity
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--two-inputs"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="opacity"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="opacity"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="opacity"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral2"
                data-test-icon="opacity"
                height="12"
                name="Opacity"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="opacity"
              maxlength="6"
              type="text"
              value="Mixed"
            />
            <div
              class="css-zcp5dz TextFieldPopover"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-6i6anv Popover"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral1"
                    data-test-icon="opacity"
                    height="12"
                    name="Opacity"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed opacity (Mixed)
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="border-radius"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--chip TextFieldWrapper--full-width"
            data-test-text-field-wrapper="border-radius"
          >
            <div
              class="css-e5vky9 ScrubbableInput ScrubbableInput--disabled"
              data-test-box=""
              data-test-scrubbable-input="border-radius"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral2"
                data-test-icon="corners"
                height="12"
                name="Corners"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="border-radius"
              maxlength="6"
              type="text"
              value="0"
            />
            <div
              class="css-zcp5dz TextFieldPopover"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="detached"
                height="12"
                name="Detached"
                width="12"
              />
              <div
                class="css-6i6anv Popover"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral1"
                    data-test-icon="corners"
                    height="12"
                    name="Corners"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed border radius (0)
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="1"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral1"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
              </div>
            </div>
            <div
              class="css-1jnxvbp Chip TextFieldWrapper__chip TextFieldWrapper__chip--attached-value TextFieldChip"
              data-test-chip=""
            >
              Mixed
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ButtonIcon ButtonIcon--selected"
            data-test-button-icon="corners-mode"
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--blue1"
              data-test-icon="corners"
              height="12"
              name="Corners"
              width="12"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Individual corners
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnAppearance snapshots should toggle border radius mode 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Opacity
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--two-inputs"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="opacity"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="opacity"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="opacity"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral2"
                data-test-icon="opacity"
                height="12"
                name="Opacity"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="opacity"
              maxlength="6"
              type="text"
              value="100"
            />
            <div
              class="css-zcp5dz TextFieldPopover"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-6i6anv Popover"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral1"
                    data-test-icon="opacity"
                    height="12"
                    name="Opacity"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed opacity (100)
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="border-radius"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="border-radius"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="border-radius"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral2"
                data-test-icon="corners"
                height="12"
                name="Corners"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="border-radius"
              maxlength="6"
              type="text"
              value="0"
            />
            <div
              class="css-zcp5dz TextFieldPopover"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-6i6anv Popover"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral1"
                    data-test-icon="corners"
                    height="12"
                    name="Corners"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed border radius (0)
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="1"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral1"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ButtonIcon ButtonIcon--selected"
            data-test-button-icon="corners-mode"
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--neutral1"
              data-test-icon="corners"
              height="12"
              name="Corners"
              width="12"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Individual corners
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ColumnAppearance snapshots should toggle border radius mode to the merged 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp SectionColumn SectionColumn--with-bottom-margin"
    data-test-section=""
  >
    <div
      class="css-xdzdnq SectionColumnLabels"
      data-test-box=""
      style="width: calc(100% - 24px - 0px - 8px);"
    >
      <small
        class="css-1jnxvbp SectionColumnLabels__label Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
        data-test-text=""
        style="text-align: inherit;"
      >
        Opacity
      </small>
    </div>
    <div
      class="css-4ja0ji"
      data-test-box=""
    >
      <div
        class="css-biptg5 SectionColumnContent SectionColumnContent--two-inputs"
        data-test-box=""
        style="width: calc(100% - 24px - 0px - 8px);"
      >
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="opacity"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="opacity"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="opacity"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral2"
                data-test-icon="opacity"
                height="12"
                name="Opacity"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="opacity"
              maxlength="6"
              type="text"
              value="100"
            />
            <div
              class="css-zcp5dz TextFieldPopover"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-6i6anv Popover"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral1"
                    data-test-icon="opacity"
                    height="12"
                    name="Opacity"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed opacity (100)
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="css-1jnxvbp TextField"
          data-test-text-field="border-radius"
          data-test-tooltip=""
        >
          <div
            class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--filled TextFieldWrapper--full-width"
            data-test-text-field-wrapper="border-radius"
          >
            <div
              class="css-e5vky9 ScrubbableInput"
              data-test-box=""
              data-test-scrubbable-input="border-radius"
            >
              <div
                class="css-1jnxvbp Icon Icon--neutral2"
                data-test-icon="corners"
                height="12"
                name="Corners"
                width="12"
              />
            </div>
            <input
              class="TextFieldWrapper__input"
              data-test-text-field-input="border-radius"
              maxlength="6"
              type="text"
              value="0"
            />
            <div
              class="css-zcp5dz TextFieldPopover"
              data-test-box=""
            >
              <div
                class="css-1jnxvbp TextFieldPopover__icon TextFieldWrapper__icon Icon Icon--clickable"
                data-test-icon="variant"
                height="12"
                name="Variant"
                width="12"
              />
              <div
                class="css-6i6anv Popover"
                data-test-box=""
                data-test-popover="popover"
                style="left: 0px; top: 0px;"
              >
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="0"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral1"
                    data-test-icon="corners"
                    height="12"
                    name="Corners"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Fixed border radius (0)
                  </small>
                </div>
                <div
                  class="css-1wfopar PopoverItem"
                  data-test-box=""
                  data-test-popover-item="1"
                >
                  <div
                    class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral1"
                    data-test-icon="check"
                    height="12"
                    name="Check"
                    width="12"
                  />
                  <div
                    class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral1"
                    data-test-icon="percentage"
                    height="12"
                    name="Percentage"
                    width="12"
                  />
                  <small
                    class="css-1jnxvbp PopoverItem__text Typography Typography--neutral1 Typography--regular Typography--normal Typography--small"
                    data-test-text=""
                    style="text-align: inherit;"
                  >
                    Percentage
                  </small>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-1jnxvbp"
        data-test-box=""
      >
        <div
          class="css-c1qms7"
          data-test-box=""
        >
          <div
            class="css-1jnxvbp ButtonIcon ButtonIcon--selected"
            data-test-button-icon="corners-mode"
            data-test-tooltip=""
          >
            <div
              class="css-1jnxvbp Icon Icon--blue1"
              data-test-icon="corners"
              height="12"
              name="Corners"
              width="12"
            />
          </div>
          <div
            class="Tooltip"
          >
            <div
              class="Tooltip__content"
            >
              Individual corners
              <div
                class="css-1jnxvbp Tooltip__carrot Tooltip__carrot--top-center Icon Icon--neutral1"
                data-test-icon="carrot-down"
                height="14"
                name="CarrotDown"
                width="10"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
